<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/light_slate_blue"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight=".10"
        android:layout_gravity="center_horizontal"
        android:gravity="bottom"
        android:text="@string/Teacher_Tools"
        android:textAllCaps="true"/>

    <TextView
        android:text="@string/clever_tagline"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight=".49"
        android:layout_gravity="center"
        android:gravity="center_vertical"/>

    <EditText
        android:id="@+id/edt_username"
        android:layout_width="120dp"
        android:layout_height="0dp"
        android:layout_weight=".16"
        android:layout_gravity="center"
        android:gravity="center"
        android:hint="@string/username"/>

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="120dp"
        android:layout_height="0dp"
        android:layout_weight=".16"
        android:layout_gravity="center"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/login"
        android:layout_weight=".09"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>
